# gorchestra

./: .gitignore  Makefile  README.md  launcher.py
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/api/: edges.py  nodes.py  orchestrator.py  runs.py  settings.py  workflows.py
backend/app/orchestrator/: agent.py  prompt.py  tools.py
backend/app/runner/: child.py  ctx.py  events.py  llm.py  runner.py  tools.py
backend/tests/: test_orchestrator.py  test_runner.py
docs/: PRD.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  localSettings.ts  notify.ts  openrouterModels.ts  types.ts
frontend/src/components/: Canvas.tsx  ChatPanel.tsx  JsonView.tsx  Markdown.tsx  ModelInput.tsx  NodeIOBlock.tsx  NodePanel.tsx  NodeTraceCard.tsx  RunPanel.tsx  Settings.tsx  SnapshotBanner.tsx  TopBar.tsx  ValueViewer.tsx
scripts/: build_app.sh
